[FEAT] styles hero section

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <!--Inicio -->
     <main>
       <!--Inicio Banner-->
-      <section>
-        <article>
-          <h3>Nuevos Ingresos</h3>
-          <p>Descubrir el próximo Funko Pop de tu colección</p>
-          <a href="./pages/shop.html">SHOP</a>
+      <section class="hero">
+        <article class="hero__content container">
+          <h3 class="hero__title">Nuevos Ingresos</h3>
+          <p class="hero__text">Descubrir el próximo Funko Pop de tu colección</p>
+          <a href="./pages/shop.html" class="hero__link">SHOP</a>
         </article>
       </section>
       <section>
