--- a/index.html
+++ b/index.html
@@ -44,61 +44,65 @@
       </nav>
     </header>
     <!--Fin Header-->
-    <!--Inicio -->
-    <main>
-      <!--Inicio Banner-->
-      <section class="hero">
+    <!--Inicio Banner-->
+    <section class="hero">
         <article class="hero__content container">
           <h3 class="hero__title">Nuevos Ingresos</h3>
           <p class="hero__text">Descubrir el próximo Funko Pop de tu colección</p>
           <a href="./pages/shop.html" class="hero__link">SHOP</a>
         </article>
-      </section>
-      <section>
-        <article>
-          <h3>STAR WARS & MALORIAN</h3>
-          <p>
+    </section>
+    <!--Fin Banner-->
+    <!--Inicio Collection-->
+    <main class="main-container">
+      <section class="collection container">
+        <article class="collection__content">
+          <h3 class="collection__title">STAR WARS & MALORIAN</h3>
+          <p class="collection__text">
             Disfruta de una saga que sigue agregando personajes a su colección
           </p>
-          <a href="./pages/shop.html">VER COLECCIÓN</a>
-          <picture>
-            <img
+          <a class="collection__link" href="./pages/shop.html">VER COLECCIÓN</a>
+        </article>  
+        <picture class="collection__cover">
+            <img 
               src="./img/star-wars/baby-yoda-1.webp"
               alt="Figura coleccionable de Grogu de la serie The Mandalorian"
             />
-          </picture>
-        </article>
+        </picture>  
       </section>
-      <section>
-        <article>
-          <h3>POKEMON INDIGO</h3>
-          <p>
+      <section class="collection container">
+        <article class="collection__content">
+          <h3 class="collection__title">POKEMON INDIGO</h3>
+          <p class="collection__text">
             Atrapa todos los que puedas y disfruta de una colección llena de
             amigos
           </p>
-          <a href="./pages/shop.html">VER COLECCIÓN</a>
-          <picture>
+          <a class="collection__link" href="./pages/shop.html">VER COLECCIÓN</a>
+        </article>
+        <picture class="collection__cover">
             <img
               src="./img/pokemon/vulpix-1.webp"
               alt="Figura coleccionable Funko de Vulpix de la serie Pokemon"
             />
-          </picture>
-        </article>
+        </picture>
       </section>
-      <section>
-        <article>
-          <h3>HARRY POTTER</h3>
-          <p>Revive los recuerdos de una saga llena de magia y encanto</p>
-          <a href="./pages/shop.html">VER COLECCIÓN</a>
-          <picture>
-            <img
+      <section class="collection container">
+        <article class="collection__content">
+          <h3 class="collection__title">HARRY POTTER</h3>
+          <p class="collection__text">Revive los recuerdos de una saga llena de magia y encanto</p>
+          <a class="collection__link" href="./pages/shop.html">VER COLECCIÓN</a>
+        </article>
+        <picture class="collection__cover">
+          <img
               src="./img/harry-potter/snape-patronus-1.webp"
               alt="Figura coleccionable Funko del Patronus de Snape en la película de Harry Potter"
-            />
-          </picture>
-        </article>
+          />
+        </picture>
       </section>
-      <section>
+    </main>
+    <!--Fin Collection-->
+    <!--Inicio -->
+      <section class="">
         <h2>ÚLTIMOS LANZAMIENTOS</h2>
         <ul>
           <li>
@@ -157,7 +161,8 @@
           </li>
         </ul>
       </section>
-    </main>
+    <!--Inicio -->
+    <!--Inicio Footer-->
     <footer>
       <section>
         <nav>
@@ -177,6 +182,7 @@
       </section>
       <p>All rights reserved 2023 - Funkoshop &copy;</p>
     </footer>
+    <!--Fin Footer-->
     <!-- Iconify -->
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
   </body>
