--- a/index.html
+++ b/index.html
@@ -101,67 +101,73 @@
       </section>
     </main>
     <!--Fin Collection-->
-    <!--Inicio -->
-      <section class="">
-        <h2>ÚLTIMOS LANZAMIENTOS</h2>
-        <ul>
-          <li>
-            <article>
-              <a href="">
-                <picture>
-                  <img
+    <!--Inicio Últimos lanzamientos-->
+      <section class="slider container">
+        <h2 class="slider__title">ÚLTIMOS LANZAMIENTOS</h2>
+        <ul class="slider__items">
+          <li class="slider__item">
+            <article class="card-item">
+              <a href="" class="card-item__link">
+                <picture class="card-item__cover">
+                  <span class="card-item__tag">Nuevo</span>
+                  <img class="card-item__img-front"
                     src="./img/star-wars/trooper-1.webp"
                     alt="Figura coleccionable Funko de un Stormtrooper"
                   />
+                  <img class="card-item__img-back" src="./img/star-wars/trooper-box.webp"  alt="Figura coleccionable Funko de un Stormtrooper en caja" >
                 </picture>
-                <div>
-                  <p>STAR WARS</p>
-                  <h4>STORMTROOPER LIGHTSABER</h4>
-                  <p>$ 1799,99</p>
-                  <p>3 CUOTAS SIN INTERÉS</p>
+                <div class="card-item__content">
+                  <p class="card-item__license">STAR WARS</p>
+                  <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
+                  <p class="card-item__price">$ 1799,99</p>
+                  <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
                 </div>
               </a>
             </article>
           </li>
-          <li>
-            <article>
-              <a href="">
-                <picture>
-                  <img
+          <li class="slider__item">
+            <article class="card-item">
+              <a href="" class="card-item__link">
+                <picture class="card-item__cover">
+                  <span class="card-item__tag">Nuevo</span>
+                  <img class="card-item__img-front"
                     src="./img/pokemon/pidgeotto-1.webp"
                     alt="Figura coleccionable Funko de Pidgeotto"
                   />
+                  <img class="card-item__img-back" src="./img/pokemon/pidgeotto-box.webp"  alt="Figura coleccionable Funko de Pidgeotto en caja" >
                 </picture>
-                <div>
-                  <p>POKEMON</p>
-                  <h4>PIDGEOTTO</h4>
-                  <p>$ 1799,99</p>
-                  <p>3 CUOTAS SIN INTERÉS</p>
+                <div class="card-item__content">
+                  <p class="card-item__license">POKEMON</p>
+                  <h4 class="card-item__name">PIDGEOTTO</h4>
+                  <p class="card-item__price">$ 1799,99</p>
+                  <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
                 </div>
               </a>
             </article>
           </li>
-          <li>
-            <article>
-              <a href="">
-                <picture>
-                  <img
+          <li class="slider__item">
+            <article class="card-item">
+              <a href="" class="card-item__link">
+                <picture class="card-item__cover">
+                  <span class="card-item__tag">Nuevo</span>
+                  <img class="card-item__img-front"
                     src="./img/harry-potter//luna-1.webp"
                     alt="Figura coleccionable Funko de Luna loovegood "
                   />
+                  <img class="card-item__img-back" src="./img/harry-potter/luna-box.webp"  alt="Figura coleccionable Funko de Luna loovegood en caja" >
                 </picture>
-                <div>
-                  <p>HARRY POTTER</p>
-                  <h4>LUNA LOVEGOOD LION MASK</h4>
-                  <p>$ 1799,99</p>
-                  <p>3 CUOTAS SIN INTERÉS</p>
+                <div class="card-item__content">
+                  <p class="card-item__license">HARRY POTTER</p>
+                  <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                  <p class="card-item__price">$ 1799,99</p>
+                  <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
                 </div>
               </a>
             </article>
           </li>
         </ul>
       </section>
-    <!--Inicio -->
+    <!--Fin últimos lanzamientos-->
     <!--Inicio Footer-->
     <footer>
       <section>
