--- a/index.html
+++ b/index.html
@@ -169,24 +169,24 @@
       </section>
     <!--Fin últimos lanzamientos-->
     <!--Inicio Footer-->
-    <footer>
-      <section>
-        <nav>
-          <ul>
-            <li><a href="./pages/shop.html">SHOP</a></li>
-            <li><a href="./pages/register.html">REGISTRARSE</a></li>
-            <li><a href="./pages/login.html">LOGIN</a></li>
-            <li><a href="./pages/contacto.html">CONTACTO</a></li>
+    <footer class="footer">
+      
+        <nav class="navbar container">
+          <ul class="navbar__item">
+            <li class="navbar__item"><a class="navbar__link" href="./pages/shop.html">SHOP</a></li>
+            <li class="navbar__item"><a class="navbar__link" href="./pages/register.html">REGISTRARSE</a></li>
+            <li class="navbar__item"><a class="navbar__link" href="./pages/login.html">LOGIN</a></li>
+            <li class="navbar__item"><a class="navbar__link" href="./pages/contacto.html">CONTACTO</a></li>
           </ul>
-          <picture>
-            <img
+          <picture class="">
+            <img class=""
               src="./img/branding/isotype.svg"
               alt="Isotipo de la marca Funkoshop"
             />
           </picture>
         </nav>
-      </section>
-      <p>All rights reserved 2023 - Funkoshop &copy;</p>
+      
+      <p class="footer__copy">All rights reserved 2023 - Funkoshop &copy;</p>
     </footer>
     <!--Fin Footer-->
     <!-- Iconify -->
