--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="http://cdn.jsdeliver.net/npm/@glidejs/glide/dist/css/glide.core.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="http://cdn.jsdeliver.net/npm/@glidejs/glide/dist/css/glide.theme.min.css"
+    />
     <link rel="stylesheet" href="./css/style-index.css" />
     <title>Home | Funkoshop</title>
   </head>
-  <body> 
+  <body>
     <!--Inicio Header-->
     <header>
       <nav class="navbar container">
@@ -22,11 +30,19 @@
         <!--Enlaces-->
         <ul class="navbar__menu">
           <li class="navbar__item with-submenu">
-            <a href="./pages/shop.html" class="navbar__link with-icon">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
+            <a href="./pages/shop.html" class="navbar__link with-icon"
+              >SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon
+            ></a>
             <ul class="submenu">
-              <li class="submenu__item"><a href="" class="submenu__link ">Funkos</a></li>
-              <li class="submenu__item"><a href="" class="submenu__link">Remeras</a></li>
-              <li class="submenu__item"><a href="" class="submenu__link">LLaveros</a></li>
+              <li class="submenu__item">
+                <a href="" class="submenu__link">Funkos</a>
+              </li>
+              <li class="submenu__item">
+                <a href="" class="submenu__link">Remeras</a>
+              </li>
+              <li class="submenu__item">
+                <a href="" class="submenu__link">LLaveros</a>
+              </li>
             </ul>
           </li>
           <li class="navbar__item">
@@ -46,11 +62,11 @@
     <!--Fin Header-->
     <!--Inicio Banner-->
     <section class="hero">
-        <article class="hero__content container">
-          <h3 class="hero__title">Nuevos Ingresos</h3>
-          <p class="hero__text">Descubrir el próximo Funko Pop de tu colección</p>
-          <a href="./pages/shop.html" class="hero__link">SHOP</a>
-        </article>
+      <article class="hero__content container">
+        <h3 class="hero__title">Nuevos Ingresos</h3>
+        <p class="hero__text">Descubrir el próximo Funko Pop de tu colección</p>
+        <a href="./pages/shop.html" class="hero__link">SHOP</a>
+      </article>
     </section>
     <!--Fin Banner-->
     <!--Inicio Collection-->
@@ -62,13 +78,13 @@
             Disfruta de una saga que sigue agregando personajes a su colección
           </p>
           <a class="collection__link" href="./pages/shop.html">VER COLECCIÓN</a>
-        </article>  
+        </article>
         <picture class="collection__cover">
-            <img 
-              src="./img/star-wars/baby-yoda-1.webp"
-              alt="Figura coleccionable de Grogu de la serie The Mandalorian"
-            />
-        </picture>  
+          <img
+            src="./img/star-wars/baby-yoda-1.webp"
+            alt="Figura coleccionable de Grogu de la serie The Mandalorian"
+          />
+        </picture>
       </section>
       <section class="collection container">
         <article class="collection__content">
@@ -80,41 +96,49 @@
           <a class="collection__link" href="./pages/shop.html">VER COLECCIÓN</a>
         </article>
         <picture class="collection__cover">
-            <img
-              src="./img/pokemon/vulpix-1.webp"
-              alt="Figura coleccionable Funko de Vulpix de la serie Pokemon"
-            />
+          <img
+            src="./img/pokemon/vulpix-1.webp"
+            alt="Figura coleccionable Funko de Vulpix de la serie Pokemon"
+          />
         </picture>
       </section>
       <section class="collection container">
         <article class="collection__content">
           <h3 class="collection__title">HARRY POTTER</h3>
-          <p class="collection__text">Revive los recuerdos de una saga llena de magia y encanto</p>
+          <p class="collection__text">
+            Revive los recuerdos de una saga llena de magia y encanto
+          </p>
           <a class="collection__link" href="./pages/shop.html">VER COLECCIÓN</a>
         </article>
         <picture class="collection__cover">
           <img
-              src="./img/harry-potter/snape-patronus-1.webp"
-              alt="Figura coleccionable Funko del Patronus de Snape en la película de Harry Potter"
+            src="./img/harry-potter/snape-patronus-1.webp"
+            alt="Figura coleccionable Funko del Patronus de Snape en la película de Harry Potter"
           />
         </picture>
       </section>
     </main>
     <!--Fin Collection-->
     <!--Inicio Últimos lanzamientos-->
-      <section class="slider container">
-        <h2 class="slider__title">ÚLTIMOS LANZAMIENTOS</h2>
-        <ul class="slider__items">
-          <li class="slider__item">
+    <section class="slider container glide  glide--carousel glide--swipe ">
+      <h2 class="slider__title">ÚLTIMOS LANZAMIENTOS</h2>
+      <div class="glide__track" data-glide-el="track">
+        <ul class="slider__items glide__slides">
+          <li class="slider__item glide__slide">
             <article class="card-item">
               <a href="" class="card-item__link">
                 <picture class="card-item__cover">
                   <span class="card-item__tag">Nuevo</span>
-                  <img class="card-item__img-front"
+                  <img
+                    class="card-item__img-front"
                     src="./img/star-wars/trooper-1.webp"
                     alt="Figura coleccionable Funko de un Stormtrooper"
                   />
-                  <img class="card-item__img-back" src="./img/star-wars/trooper-box.webp"  alt="Figura coleccionable Funko de un Stormtrooper en caja" >
+                  <img
+                    class="card-item__img-back"
+                    src="./img/star-wars/trooper-box.webp"
+                    alt="Figura coleccionable Funko de un Stormtrooper en caja"
+                  />
                 </picture>
                 <div class="card-item__content">
                   <p class="card-item__license">STAR WARS</p>
@@ -125,16 +149,21 @@
               </a>
             </article>
           </li>
-          <li class="slider__item">
+          <li class="slider__item glide__slide">
             <article class="card-item">
               <a href="" class="card-item__link">
                 <picture class="card-item__cover">
                   <span class="card-item__tag">Nuevo</span>
-                  <img class="card-item__img-front"
+                  <img
+                    class="card-item__img-front"
                     src="./img/pokemon/pidgeotto-1.webp"
                     alt="Figura coleccionable Funko de Pidgeotto"
                   />
-                  <img class="card-item__img-back" src="./img/pokemon/pidgeotto-box.webp"  alt="Figura coleccionable Funko de Pidgeotto en caja" >
+                  <img
+                    class="card-item__img-back"
+                    src="./img/pokemon/pidgeotto-box.webp"
+                    alt="Figura coleccionable Funko de Pidgeotto en caja"
+                  />
                 </picture>
                 <div class="card-item__content">
                   <p class="card-item__license">POKEMON</p>
@@ -145,16 +174,21 @@
               </a>
             </article>
           </li>
-          <li class="slider__item">
+          <li class="slider__item glide__slide">
             <article class="card-item">
               <a href="" class="card-item__link">
                 <picture class="card-item__cover">
                   <span class="card-item__tag">Nuevo</span>
-                  <img class="card-item__img-front"
+                  <img
+                    class="card-item__img-front"
                     src="./img/harry-potter//luna-1.webp"
                     alt="Figura coleccionable Funko de Luna loovegood "
                   />
-                  <img class="card-item__img-back" src="./img/harry-potter/luna-box.webp"  alt="Figura coleccionable Funko de Luna loovegood en caja" >
+                  <img
+                    class="card-item__img-back"
+                    src="./img/harry-potter/luna-box.webp"
+                    alt="Figura coleccionable Funko de Luna loovegood en caja"
+                  />
                 </picture>
                 <div class="card-item__content">
                   <p class="card-item__license">HARRY POTTER</p>
@@ -166,30 +200,60 @@
             </article>
           </li>
         </ul>
-      </section>
+      </div>
+      <div data-glide-el="controls">
+        <button data-glide-dir="<<">Start</button>
+        <button data-glide-dir=">>">End</button>
+      </div>
+    </section>
     <!--Fin últimos lanzamientos-->
     <!--Inicio Footer-->
     <footer class="footer">
-      
-        <nav class="navbar container">
-          <ul class="navbar__item">
-            <li class="navbar__item"><a class="navbar__link" href="./pages/shop.html">SHOP</a></li>
-            <li class="navbar__item"><a class="navbar__link" href="./pages/register.html">REGISTRARSE</a></li>
-            <li class="navbar__item"><a class="navbar__link" href="./pages/login.html">LOGIN</a></li>
-            <li class="navbar__item"><a class="navbar__link" href="./pages/contacto.html">CONTACTO</a></li>
-          </ul>
-          <picture class="">
-            <img class=""
-              src="./img/branding/isotype.svg"
-              alt="Isotipo de la marca Funkoshop"
-            />
-          </picture>
-        </nav>
-      
+      <nav class="navbar container">
+        <ul class="navbar__item">
+          <li class="navbar__item">
+            <a class="navbar__link" href="./pages/shop.html">SHOP</a>
+          </li>
+          <li class="navbar__item">
+            <a class="navbar__link" href="./pages/register.html">REGISTRARSE</a>
+          </li>
+          <li class="navbar__item">
+            <a class="navbar__link" href="./pages/login.html">LOGIN</a>
+          </li>
+          <li class="navbar__item">
+            <a class="navbar__link" href="./pages/contacto.html">CONTACTO</a>
+          </li>
+        </ul>
+        <picture class="">
+          <img
+            class=""
+            src="./img/branding/isotype.svg"
+            alt="Isotipo de la marca Funkoshop"
+          />
+        </picture>
+      </nav>
+
       <p class="footer__copy">All rights reserved 2023 - Funkoshop &copy;</p>
     </footer>
     <!--Fin Footer-->
     <!-- Iconify -->
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script>
+          new Glide(".glide",  {
+            type: 'carousel',
+            startAt: 0,
+            perView: 3,
+            gap: 30,
+            breakpoints: {
+              991: {
+                perView: 2,
+              },
+              768: {
+                perView: 1,
+              }
+            }
+           }).mount();
+    </script>
   </body>
 </html>
